--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Final Pizza</title>
   </head>
   <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -15,10 +15,10 @@
 
     </div>
     <!-- Bottom text of the Pizza Slice -->
-    <div
-      <p class="bottomtext">"You have reached the last pizza
+    <div class="bottomtext">
+        "You have reached the last pizza
          slice in the universe, use it wisely"
-       </p>
+
      </div>
 
   </body>
