Fixed some centering issues.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/styles.css">
     <title>Final Pizza</title>
   </head>
@@ -12,6 +13,11 @@
     <div class=intro_firstpage>
 
       <img src="css/new-s-pizza.png" class="pizzapng">
+
+    </div>
+    <div>
+      
+      
 
     </div>
     <!-- Bottom text of the Pizza Slice -->
